--- a/Solo CSS/usercss.css
+++ b/Solo CSS/usercss.css
@@ -3,7 +3,8 @@
     border: 1px solid #441B10;
     padding: 10px;
     background-color: #f8faef; 
-    text-align: center;}
+    text-align: center;
+}
 
 .attribute {
     font-weight: bold;
